# frontend-benchmark

./: .gitignore  BENCHMARK_GUIDE.md  BENCHMARK_SPEC.md  CHANGELOG_DOCKER.md  CI_CD_GUIDE.md  COMPREHENSIVE_BENCHMARK_README.md  CONTRIBUTING.md  DOCKER.md  GITHUB_ACTIONS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_DOCKER.md  README.md  RESULTS.md  RESULTS_TEMPLATE.md  docker-compose.yml
.github/: WORKFLOWS_README.md  dependabot.yml
.github/workflows/: basic-checks.yml  benchmark-comprehensive.yml  benchmark.yml
backend/: package.json  server.js
benchmarks/scripts/: README.md  benchmark-all.js  benchmark-docker-full.js  benchmark-docker.js  benchmark-quick.sh  bundle-size.js  generate-report-clean.js  generate-report.js  lighthouse-benchmark.js  package.json  stress-test.js  update-readme-results.js
implementations/angular/: Dockerfile  README.md  angular.json  package.json
implementations/blade/: Dockerfile  README.md  composer.json  index.php
implementations/blade/views/: index.blade.php
implementations/dioxus/: Cargo.toml  Dockerfile  README.md  index.html
implementations/dioxus/src/: main.rs
implementations/leptos/: Cargo.toml  Dockerfile  README.md  index.html  nginx.conf
implementations/leptos/src/: main.rs
implementations/react/: .dockerignore  Dockerfile  README.md  package.json
implementations/react/src/: App.css  App.jsx  index.css
implementations/vue/: Dockerfile  README.md  nginx.conf  package.json
implementations/vue/src/: App.vue
implementations/yew/: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
(+11 files in other folders)
