[package]
name = "leptos-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["KeyboardEvent"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
